# hssp

./: .gitignore  Dockerfile  INSTALL  Makefile.am  README-DSSP.txt  README.md  autogen.sh  bump_version.bash  changelog.dssp  configure.ac  docker-compose.yml  dssp.prj  hsspsoap.prj  makefile  makefile.dssp  mas.prj  mas.sln  mas.vcxproj  mas.vcxproj.filters  mkdssp.prj  mkhssp.prj  run_test.sh  singularity.def  sto2hssp.prj
doc/: dssp.1  dssp.html  mkdssp.1  mkdssp.html
dssp/: dssp.vcxproj  dssp.vcxproj.filters
m4/: ax_boost_timer.m4
matrices/: mkmat_h.pl
mkhssp3/: mkhssp3.vcxproj  mkhssp3.vcxproj.filters
msvc/dssp/: dssp.vcxproj  dssp.vcxproj.filters
msvc/mas/: mas.vcxproj  mas.vcxproj.filters
msvc/mkhssp/: mkhssp.vcxproj  mkhssp.vcxproj.filters  mkhssp3.vcxproj  mkhssp3.vcxproj.filters
msvc/stockholm2fasta/: stockholm2fasta.vcxproj
mtrx/: mkmat_h.pl
rsrc/: error.html  index.html
scripts/: dssp2fasta.pl  hssp2admin.pl  hssp2admin.sql  hssp2ix.pm  hssp3to1.pl  split-fasta.pl  update-hssp2
scripts/lisa/: makefile
src/: BLOSUM62.h  align-2d.cpp  align-2d.h  align-3d.cpp  align-3d.h  align.cpp  align.h  aln2hssp.cpp  blast.cpp  blast.h  buffer.h  dssp.cpp  dssp.h  fasta.cpp  fasta.h  fetchdbrefs.cpp  fetchdbrefs.h  guide.cpp  guide.h  hh-hssp.cpp  hh-hssp.h  hmmer-hssp.cpp  hmmer-hssp.h  hssp-convert-3to1.cpp  hssp-convert-3to1.h  hssp-nt.cpp  hssp-nt.h  hssp.cpp  hssp.h  hsspconv.cpp  hsspsoap.cpp  iocif.cpp  iocif.h  ioseq.cpp  ioseq.h  mas.cpp  mas.h  matrix.cpp  matrix.h  matrix.inl  (+21 more)
stockholm2fasta/: stockholm2fasta.vcxproj
test-data/: wrong1.sto
tests/: main_test_module.cpp  test_conv.cpp  test_fasta.cpp  test_readpdb.cpp
